bpo-45813: Drop redundant assertion from frame.clear()